# FullTextSearch

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
data/: output.parquet
scripts/: CSVParquetConvert.py  csv2parquet.py  evaluation.ipynb  generate_flamegraph.sh  parquet2parquet.py  qualityMetrics.py  query_rank.py
src/: Document.cpp  Document.hpp  FullTextSearchEngine.hpp  fts_engine.hpp  main.cpp  utils.hpp
src/algorithms/DummySearch/: DummySearchEngine.cpp  DummySearchEngine.hpp
src/algorithms/DummySearchEngine/: DummySearchEngine.cpp  DummySearchEngine.hpp
src/algorithms/InvertedIndex/: InvertedIndexEngine.cpp  InvertedIndexEngine.hpp
src/algorithms/InvertedIndexEngine/: InvertedIndexEngine.cpp  InvertedIndexEngine.hpp
src/algorithms/TrigramIndex/: Trigram.hpp  TrigramIndex.cpp  TrigramIndex.hpp  TrigramIndexEngine.cpp  TrigramIndexEngine.hpp  TrigramUtils.hpp
src/algorithms/TrigramIndex/index/: HashIndex.hpp  Index.hpp
src/algorithms/TrigramIndex/models/: DocFreq.hpp  Trigram.hpp
src/algorithms/TrigramIndex/parser/: TrigramParser.cpp  TrigramParser.hpp
src/algorithms/TrigramIndexEngine/: TrigramIndexEngine.cpp  TrigramIndexEngine.hpp
src/algorithms/VectorSpaceModel/: VectorSpaceModelEngine.cpp  VectorSpaceModelEngine.hpp
src/algorithms/VectorSpaceModelEngine/: VectorSpaceModelEngine.cpp  VectorSpaceModelEngine.hpp
src/algorithms/inverted/: inverted_index_engine.cpp  inverted_index_engine.hpp
src/algorithms/inverted/tokenizer/: token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
src/algorithms/trigram/: trigram_index_engine.cpp  trigram_index_engine.hpp
src/algorithms/trigram/data-structures/: parallel_hash_table.hpp
src/algorithms/trigram/index/: hash_index.hpp  index.hpp  parallel_hash_index.hpp
src/algorithms/trigram/models/: doc_freq.hpp  trigram.hpp
src/algorithms/trigram/parser/: trigram_parser.cpp  trigram_parser.hpp
src/algorithms/vsm/: vector_space_model_engine.cpp  vector_space_model_engine.hpp
src/bootstrap/: cli.cpp  cli.hpp
src/data-structures/: parallel_hash_table.hpp
src/dataUtils/: Document.cpp  Document.hpp  DocumentIterator.cpp  DocumentIterator.hpp  DocumentUtils.cpp  DocumentUtils.hpp
src/datastructures/: hyperloglog.hpp  parallel_unordered_map.hpp
src/documents/: document.hpp  document_iterator.cpp  document_iterator.hpp
src/queries/: query_iterator.cpp  query_iterator.hpp  utils.hpp
src/scoring/: bm25.cpp  bm25.hpp  scoring_function.hpp  tf_idf.cpp  tf_idf.hpp
src/tokenizer/: ITokenizer.hpp  simpletokenizer.cpp  simpletokenizer.hpp  stemmingtokenizer.cpp  stemmingtokenizer.hpp  tokenizer_rules.hpp
src/tokenizer/snowball/: LICENSE  api.h  utilities.c
src/tokenizer/snowball/src/: api.c  header.h  stem_UTF_8_english.c  stem_UTF_8_english.h
test/: CMakeLists.txt
test/scoring/: bm25_test.cpp  tf_idf_test.cpp
test/tokenizer/: stemmingtokenizer_tests.cpp
